:sparkles: retrieve all subdomains from domain name but associated domains impossible because with used API wd need to pay 500$/month
